environments/local/svc-echo.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      otel-trivago/app: echo
  template:
    metadata:
      labels:
        otel-trivago/app: echo
        otel-trivago/allow-ingress: "default"
    spec:
      containers:
        - name: echo
          imagePullPolicy: Always
          image: docker.io/falmar/hostname:latest
          ports:
            - containerPort: 80
              name: http
---

apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    otel-trivago/app: echo
spec:
  selector:
    otel-trivago/app: echo
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
---
