environments/local/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http
  annotations:
    cert-manager.io/cluster-issuer: k8s-local-issuer
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "256"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.otel-trivago.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  name: ui
  tls:
    - hosts:
        - jaeger.otel-trivago.k8s.local
        - www.otel-trivago.k8s.local
      secretName: http-ingress-cert

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc
  annotations:
    cert-manager.io/cluster-issuer: k8s-local-issuer
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "256"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - reservation.otel-trivago.k8s.local
        - room.otel-trivago.k8s.local
        - stay.otel-trivago.k8s.local
        - frontdesk.otel-trivago.k8s.local
      secretName: grpc-ingress-cert
