environments/local/svc-jaeger.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jaeger-ingress
spec:
  podSelector:
    matchLabels:
      otel-trivago/app: "jaeger"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              otel-trivago/grpc-otlp: "true"
      ports:
        - protocol: TCP
          port: 4317
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      otel-trivago/app: jaeger
  template:
    metadata:
      labels:
        otel-trivago/app: jaeger
        otel-trivago/allow-ingress: default
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "14269"
        prometheus.io/path: /metrics
    spec:
      containers:
        - name: jaeger
          imagePullPolicy: Always
          image: jaegertracing/all-in-one:latest
          args:
            - --metrics-backend=prometheus
            - --metrics-http-route=/metrics
            - --admin.http.host-port=:14269
          ports:
            - containerPort: 14269
              name: admin
            - containerPort: 16686
              name: ui
            - containerPort: 4317
              name: otlp-grpc

---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  selector:
    otel-trivago/app: jaeger
  type: ClusterIP
  ports:
    - protocol: TCP
      name: otlp-grpc
      port: 4317
      targetPort: otlp-grpc
    - protocol: TCP
      name: ui
      port: 80
      targetPort: ui
